tolk-tester/tests/invalid-syntax/err-3220.tolk
fun me(): void asm "asdf"/1

/**
@compilation_should_fail
@stderr expected top-level declaration, got `/`
 */
